# lox-rs

./: Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
src/: ast.rs  command.rs  environment.rs  error.rs  interpreter.rs  main.rs  parser.rs  scanner.rs  token.rs  utils.rs
src/command/: evaluate.rs  parse.rs  run.rs  tokenize.rs
tests/: evaluate.rs  integration_test.rs  parse.rs  scanning.rs
tests/evaluate/lox_files/: equality.lox  error.lox  minus.lox  multiply.lox  negative.lox  relation.lox  string.lox  test.lox
tests/lox_files/: double_characters.lox  error.lox  number.lox  var_declaration.lox
tests/parse/lox_files/: string.lox  test.lox
tests/run/lox_files/: test.lox
tests/scanning/lox_files/: identifier.lox  test.lox
